--- a/style.css
+++ b/style.css
@@ -91,8 +91,8 @@ section::after{
     font-size: 18px;
     letter-spacing: 1px;
     text-transform: uppercase;
-    box-shadow: 0 15px 35px rgba(0, 0, 0,0.2);
-    z-index: 1;
+    box-shadow: 0 15px 35px rgba(0,0,0,0.2);
+    z-index:+1;
     pointer-events: none;
     transition: bottom 0.5s, z-index 0s ,transform 0.5s , padding 0.5s;
     transition-delay: 0.5s,0.5s,0s,0.5s;
